OpenPAM ??????????						2014-??-??

 - FEATURE: Add a pam_oath module that implements RFC 4226 (HOTP) and
   RFC 6238 (TOTP).

 - BUGFIX: The is_upper() predicate only accepted the letter A as an
   upper-case character instead of the entire A-Z range.  As a result,
   service and module names containing upper-case letters other than A
   would be rejected.
============================================================================
OpenPAM Nummularia						2013-09-07

 - ENHANCE: Rewrite the dynamic loader to improve readability and
   reliability.  Modules can now be listed without the ".so" suffix in
   the policy file; OpenPAM will automatically add it, just like it
   will automatically add the version number if required.

 - ENHANCE: Allow openpam_straddch(3) to be called without a character
   so it can be used to preallocate a string.

 - ENHANCE: Improve portability by adding simple asprintf(3) and
   vasprintf(3) implementations for platforms that don't have them.

 - ENHANCE: Move the libpam sources into a separate subdirectory.

 - ENHANCE: Substantial documentation improvements.

 - BUGFIX: When openpam_readword(3) encountered an opening quote, it
   would set the first byte in the buffer to '\0', discarding all
   existing text and, unless the buffer was empty to begin with, all
   subsequent text as well.  This went unnoticed because none of the
   unit tests for quoted strings had any text preceding the opening
   quote.

 - BUGFIX: make --with-modules-dir work the way it was meant to work
   (but never did).
============================================================================
OpenPAM Micrampelis						2012-05-26

 - FEATURE: Add an openpam_readword(3) function which reads the next
   word from an input stream, applying shell quoting and escaping
   rules.  Add numerous unit tests for openpam_readword(3).

 - FEATURE: Add an openpam_readlinev(3) function which uses the
   openpam_readword(3) function to read words from an input stream one